--- a/EXERCICIOS/016/fundo001.html
+++ b/EXERCICIOS/016/fundo001.html
@@ -11,19 +11,24 @@
     div.quadrado{
        border:  2px solid black; 
        border-radius: 10px;
-       height: 300px;
-       width: 300px;
-       display: inline-block;
+       height: 200px;
+       background-image: url('imagens/wallpaper002.jpg');
+     
        background-color: lightgray;
 }
     div#q1{
-      background-color: skyblue;  
+      background-position: left top; 
     }
     div#q2{
-        background-image: linear-gradient(to bottom, yellow, red);
+        background-position: right center; 
 }    
     div#q3{
-        background-image: url('imagens/pattern003.png');
+        background-position: left center; 
+
+    }  
+    div#q4{
+        background-position: bottom center; 
+
     }    
 
     </style>
@@ -40,5 +45,9 @@
     <div class="quadrado" id="q3">
 
     </div>
+    <div class="quadrado" id="q4">
+
+    </div>
+
 </body>
 </html>
