--- a/EXERCICIOS/016/fundo003.html
+++ b/EXERCICIOS/016/fundo003.html
@@ -5,30 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Centralização de caixas na vertical</title>
     <style>
+        body{
+            background-color: black;
+        }
         #container{
             background-color: purple;
             background-size: 100% 100%;
-            position: relative;
             height: 96vh;
             padding: 10px;
-            background-image: url('imagens/target001.png');
+            background-image: url(imagens/target001.png);
             background-repeat: no-repeat;
         }
         #conteudo{
             background-color: yellow;
+            position: absolute;
             height: 200px;
             width: 400px;
-            background-image: url('imagens/target001.png');
-            background-size: 100% 100%;
 
-            position: absolute;
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
-            padding: 10px;
+
+            background-image: url(imagens/target001.png);
+            background-size: 100% 100%;
 
         }
     </style>
+
+    
 </head>
 <body>
     <main>
@@ -40,3 +44,27 @@
     </main>
 </body>
 </html>
+
+#container{
+    background-color: purple;
+    background-size: 100% 100%;
+    position: relative;
+    height: 96vh;
+    padding: 10px;
+    background-image: url('imagens/target001.png');
+    background-repeat: no-repeat;
+}
+#conteudo{
+    background-color: yellow;
+    height: 200px;
+    width: 400px;
+    background-image: url('imagens/target001.png');
+    background-size: 100% 100%;
+
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+
+}
